[package]
name = "context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
glam = "0.21.3"
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
