[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
libloading = "0.7.3"
shared = { path = "../shared" }
native-dialog = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parry2d = "0.10.0"
bincode = "1.3.3"