[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.21.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
macroquad = "0.3"